# mintzo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.eu.md  README.fr.md  README.md  project.yml  vercel.json
Resources/: AppIcon.icns
Sources/Mintzo/: Info.plist  MintzoApp.swift
Sources/MintzoCore/: MintzoCore.swift  WhisperEngine.swift
Tests/MintzoCoreTests/: AppCoordinatorFlow.swift  AppCoordinatorFlowTests.swift  AppPresenceServiceTests.swift  AppearanceServiceTests.swift  AudioDecoderTests.swift  AudioPlayerController.swift  AudioPlayerControllerTests.swift  CorrectionAnthropicCorrectorTests.swift  CorrectionGuardrailsTests.swift  CorrectionLlamaSmokeTests.swift  CorrectionPromptVocabularyTests.swift  CorrectionServiceTests.swift  HUDStateMachine.swift  HUDStateMachineTests.swift  HistoryMigrationTests.swift  HistoryStoreTests.swift  KeychainKeyStoreTests.swift  LanguageCycleHotkeyAttackTests.swift  LanguageDetectionE2ETests.swift  LoginItemServiceTests.swift  MenuBarGlyphDrawing.swift  MenuBarGlyphTests.swift  MintzoCoreTests.swift  ModelManagerTests.swift  OnboardingStateMachine.swift  (+15 more)
docs/: MODELS.md
scripts/: download-test-model.sh  fetch-llama-xcframework.sh  fetch-whisper-xcframework.sh  icon_gen.swift
web/server/: .gitignore  Dockerfile  README.md  modal_app.py  pyproject.toml
web/server/app/: __init__.py  config.py  guardrails.py  llama_runtime.py  main.py  models.py  pipeline.py  prompts.py
web/server/tests/: conftest.py  test_api.py  test_decode.py  test_guardrails.py  test_models.py  test_pipeline.py  test_real.py
(+112 files in other folders)
