[project]
name = "mintzo-server"
version = "0.1.0"
description = "Mintzo web transcription server — FastAPI portable engine (whisper.cpp + llama.cpp), ADR-002"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real: end-to-end test with real models and binaries (auto-skipped when absent)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
